Adjusted carousel text, hover on index.html for responsiveness

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -84,17 +84,6 @@ body {
   border-radius: 5px;
 }
 
-.tinted {
-  background: #F00;
-  opacity: 0.5;
-}
-
-a.tinted:hover {
-  opacity: 1;
-}
-
-
-
 img.frontpageicon {
   margin-right: auto;
   margin-left: auto;
@@ -131,12 +120,29 @@ footer{
 }
 
 .captionleft {
-  left: 0;
+  left: 10px;
+  right: auto;
   max-width: 150px;
   border-radius: 5px;
   padding-bottom: 0px;
   bottom: 5px;
 }
+
+.captionsmallleft {
+  max-width: 150px;
+  top: auto;
+  bottom: 45%;
+  right: auto;
+  left: 10px;
+  }
+
+.captionsmallright {
+  max-width: 150px;
+  top: auto;
+  bottom: 45%;
+  right: 10px;
+  left: auto;
+  }
 
 .captionattributionright {
   bottom: 0;
@@ -312,9 +318,14 @@ a:visited { color: #0079C1; }
   margin-bottom: 15px;
 }
 
+h4.carousel {
+  opacity: 0;
+}
+
 h3.carousel {
   margin-top: 3px;
   color: #FFF;
+  opacity: 0;
 }
 
 .carousel-caption-ctr {
@@ -341,17 +352,34 @@ a.floattext:hover {
   .captionleft {
     max-width: 20%;
     top: auto;
-    bottom: 15%;
+    bottom: 20%;
     right: auto;
     left: 20%;
   }
   .captionright {
     max-width: 20%;
     top: auto;
-    bottom: 15%;
+    bottom: 20%;
     right: 20%;
     left: auto;
   }
+  
+  .captionsmallleft {
+    max-width: 20%;
+    top: auto;
+    bottom: 45%;
+    right: auto;
+    left: 20%;
+    }
+
+  .captionsmallright {
+    max-width: 20%;
+    top: auto;
+    bottom: 45%;
+    right: 20%;
+    left: auto;
+    }
+
   .brand {
     max-height: 75px;
   }
@@ -400,6 +428,13 @@ a.floattext:hover {
     right: auto;
     left: 400px;
   }
+  .captionsmallleft {
+    opacity: 0;
+    }
+
+  .captionsmallright {
+    opacity: 0;
+    }
   .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
     height: 80px;
     padding-top: 25px;
@@ -407,6 +442,12 @@ a.floattext:hover {
   .navbar-default .navbar-nav>li>a {
     color: #fff;
     padding-top: 25px;
+  }
+  h4.carousel {
+    opacity: 1;
+  }
+  h3.carousel {
+    opacity: 1;
   }
 }
 
@@ -416,14 +457,23 @@ a.floattext:hover {
     top: auto;
     bottom: 200px;
     right: 550px;
-    left: auto;
+    left: 25px;
   }
   .captionright {
     max-width: 450px;
     top: auto;
     bottom: 200px;
-    right: auto;
+    right: 25px;
     left: 550px;
+  }
+  
+  .tinted {
+    background: #F00;
+    opacity: 0.5;
+  }
+
+  .tinted:hover {
+    opacity: 1;
   }
 }
 
