--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -344,6 +344,11 @@ a.floattext:hover {
   opacity: 1;
 }
 
+.blackground {
+  background-color: #d3d3d3;
+  padding: 20px;
+}
+
 @media (min-width: 480px) {
   .bs-docs-featurette {
     padding-top: 0px;
@@ -430,10 +435,14 @@ a.floattext:hover {
   }
   .captionsmallleft {
     opacity: 0;
+    right: 0;
+    left: auto;
     }
 
   .captionsmallright {
     opacity: 0;
+    right: auto;
+    left: 0;
     }
   .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
     height: 80px;
