Donation transaction javascript separated from donation_2 content.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -21,10 +21,10 @@
 
     <% if(@item[:title]=="Eligibility") %>
       <!-- Date.js to make the eligibility sheet easier. Should also prove useful when we do scheduling stuff -Browne -->
-      <script src="/static/scripts/date.js"></script>
+      <script src="/static/scripts/date.js" defer></script>
     <% end %>
-    <script src="/static/scripts/generic.js"></script>
-    <script src="/static/scripts/twitterfeed-fade.js"></script>
+    <script src="/static/scripts/generic.js" defer></script>
+    <script src="/static/scripts/twitterfeed-fade.js" defer></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
