--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -440,6 +440,10 @@ a.floattext:hover {
   border-width: 5px;
 }
 
+.story {
+  margin-top: 60px;
+}
+
 @media (min-width: 480px) {
   .bs-docs-featurette {
     padding-top: 0px;
