--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -148,11 +148,12 @@ li.first, li.last, li.state, li.zip {
   font-size: 1.5em;
 }
 
-.sa-cdc-utility {
-  padding-right: 80px;
-  font-size: 1em;
-  text-align: right;
-}
+
+/* .sa-cdc-utility { */
+/*   padding-right: 80px; */
+/*   font-size: 1em; */
+/*   text-align: right; */
+/* } */
 
 .brand {
   margin: 3px 0px 0px 0px;
@@ -192,9 +193,9 @@ footer {
 }
 
 /*  Attempting to fix carousel gradient */
-.carousel-control.left, .carousel-control.right {
-    background-image: none
-}
+/* .carousel-control.left, .carousel-control.right { */
+/*     background-image: none */
+/* } */
 
 .carousel-caption a:link { color: #FFFFFF; }
 
@@ -252,26 +253,26 @@ footer {
   font-size: .5em;
 }
 
-.captionblack a:link { color: #000000; }
+/* .captionblack a:link { color: #000000; } */
 
-.captionblack a:active { color: #000000; }
+/* .captionblack a:active { color: #000000; } */
 
-.captionblack a:visited { color: #000000; }
+/* .captionblack a:visited { color: #000000; } */
 
-/*Trying to move pagination dots lower*/
-.carousel-indicators {
-  margin-bottom: 3px;
-}
+/* /*Trying to move pagination dots lower*/ */
+/* .carousel-indicators { */
+/*   margin-bottom: 3px; */
+/* } */
 
 /*  Attempting to fix height of footer */
-.demo{
-    margin-bottom: -99999px;
-    padding-bottom: 99999px;
-}
+/* .demo{ */
+/*     margin-bottom: -99999px; */
+/*     padding-bottom: 99999px; */
+/* } */
 
-.equal {
-    overflow: hidden;
-}
+/* .equal { */
+    /* overflow: hidden; */
+/* } */
 
 /* Add margin to buttons by default. */
 .btn {
@@ -334,11 +335,11 @@ p.partner {
 /**
  * Vertical align image.
  **/
-span.partner {
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-}
+/* span.partner { */
+/*   display: inline-block; */
+/*   vertical-align: middle; */
+/*   height: 100%; */
+/* } */
 
 
 
@@ -363,10 +364,10 @@ a:visited { color: #0079C1; }
   text-align: center;
   vertical-align top;
 }
-.bs-docs-featurette + .bs-docs-footer {
-  margin-top: 0;
-  border-top: 0;
-}
+/* .bs-docs-featurette + .bs-docs-footer { */
+/*   margin-top: 0; */
+/*   border-top: 0; */
+/* } */
 
 .bs-docs-featurette-title {
   /*font-size: 30px;*/
@@ -386,9 +387,9 @@ a:visited { color: #0079C1; }
   background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
 }
 
-.bs-docs-featurette ul, ol {
-  text-align: left;
-}
+/* .bs-docs-featurette ul, ol { */
+/*   text-align: left; */
+/* } */
 .bs-docs-featurette-img {
   display: block;
   border-radius: 5px;
@@ -400,10 +401,10 @@ a:visited { color: #0079C1; }
   text-decoration: none;
   color: #428bca;
 }
-.bs-docs-featurette-img img {
-  display: block;
-  margin-bottom: 15px;
-}
+/* .bs-docs-featurette-img img { */
+/*   display: block; */
+/*   margin-bottom: 15px; */
+/* } */
 
 h4.carousel {
   opacity: 0;
@@ -420,16 +421,16 @@ h3.carousel {
   top: 25%;
 }
 
-.floattext {
-  opacity: 0;
-  font-size: 3em;
-}
+/* .floattext { */
+/*   opacity: 0; */
+/*   font-size: 3em; */
+/* } */
 
-a.floattext:hover {
-  color: #FFF;
-  text-decoration: none;
-  opacity: 1;
-}
+/* a.floattext:hover { */
+/*   color: #FFF; */
+/*   text-decoration: none; */
+/*   opacity: 1; */
+/* } */
 
 .blackground {
   background-color: #d3d3d3;
@@ -506,14 +507,14 @@ a.floattext:hover {
     margin-right: auto;
     max-width: 80%;
   }
-  .bs-docs-featured-sites .col-sm-3:first-child img {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
-  .bs-docs-featured-sites .col-sm-3:last-child img {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
+  /* .bs-docs-featured-sites .col-sm-3:first-child img { */
+  /*   border-top-left-radius: 4px; */
+  /*   border-bottom-left-radius: 4px; */
+  /* } */
+  /* .bs-docs-featured-sites .col-sm-3:last-child img { */
+  /*   border-top-right-radius: 4px; */
+  /*   border-bottom-right-radius: 4px; */
+  /* } */
 
   .bs-docs-featurette .img-responsive {
     margin-top: 0;
