--- a/layouts/default.html
+++ b/layouts/default.html
@@ -117,8 +117,8 @@
             </h5>
           </div>
 
-          <div class="col-md-4 text-center">
-	    <div class="row" id="twitter-feed">
+          <div class="col-md-4">
+            <div class="row" id="twitter-feed">
             </div>
           </div>
           <div class="col-md-5 social-media">
