Better margins for Twitter content.

--- a/static/css/twitter-styles-fade.css
+++ b/static/css/twitter-styles-fade.css
@@ -60,10 +60,16 @@ img  {
   }
 }
 
+
 .twitter-text span {
   margin:0px;
   line-height:15px;   
 }
+
+div.twitter-message {
+  margin-left: 20px;
+}
+
 .twitter-text a,  h1 a {
   color: #00acee;
   text-decoration: none;
