--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -253,6 +253,12 @@ footer {
   font-size: .5em;
 }
 
+.ltrtpadding {
+  padding-left: 100px;
+  padding-right: 100px;
+  text-align: left;
+}
+
 /* .captionblack a:link { color: #000000; } */
 
 /* .captionblack a:active { color: #000000; } */
@@ -442,7 +448,7 @@ h3.carousel {
 }
 
 .story {
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 @media (min-width: 480px) {
