Made changes per John 24 July

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -53,6 +53,10 @@ footer .well {
 
 .well a:visited { color: #C0C0C0; }
 
+.btn {
+  margin-bottom: 5px;
+}
+
 /**
  * Donation form formatting...
  * 8 July 2014
