--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -580,10 +580,21 @@ h3.carousel {
   }
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+  color: #fff;
+}
+
 @media (min-width: 768px) {
 
   #sa-cdc-navbar-collapse {
     font-size: 1.1em;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: #777;
   }
 
   .bs-docs-featurette {
