--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -93,16 +93,13 @@ form li {
   padding: 5px  5px 5px 5px;
 }
 
-label {
+/*label {
   display: block;
   margin-bottom: 0px;
   margin-right: 10px;
   text-align: left;
 }
-
-label:after {
-  content: ':';
-}
+*/
 
 button {
   cursor: pointer;
@@ -144,10 +141,6 @@ li.first, li.last, li.city, li.state, li.zip, li.addr1, li.addr2 {
   clear: both;
   margin-top: 0;
   padding-top: 10px;
-}
-
-#transaction-who-block {
-  width: 100%;
 }
 
 #transaction-CC-block span {
