--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -20,31 +20,9 @@ body {
   margin-bottom: -40px;
 }
 
-/*.border1 {
-  border-style: double;
-  border-color: rgb(0, 116, 178);
-  border-width: 8px;
-}*/
-
-/*.footer-well {
-  border-radius:12px;
-  background-color:#FFF;
-  color:#333;
-}*/
-
-#donation-central.well input, #donation-central.well button, #donation-central.well select {
-  color: black;
-}
-
 .well {
   background-color: rgba(0, 116, 178, 1.0);
   color:#FFF;
-}
-
-footer .well {
-  border: none;
-  padding: 19px 0px 19px 0px;
-  margin-bottom: 0;
 }
 
 .well a:link { color: #FFFFFF; }
@@ -53,80 +31,51 @@ footer .well {
 
 .well a:visited { color: #C0C0C0; }
 
-.btn {
-  margin-bottom: 5px;
+.donate .well {
+  background-color: rgba(238, 238, 238, 1);
+  color: #000;
+}
+
+.donate .well a:link { color: #000; }
+
+footer .well {
+  border: none;
+  padding: 19px 0px 19px 0px;
+  margin-bottom: 0;
 }
 
 /**
  * Donation form formatting...
- * 8 July 2014
+ * 25 November 2014
  * -Steelio
  **/
-
-span.breadcrumb {
-  clear: none;
-  float: left;
-  display:block;
+div.stage {
   background:#b8b8b8;
-  width:25px;
-  margin:5px 8.5%;
+  width:30px;
   color:#fff;
   padding:4px;
   border-radius:5em;
-  text-align:center;
   font-weight:bold;
   -webkit-transition:color 0.25s linear, background-color 0.25s linear;
   -moz-transition:color 0.25s linear, background-color 0.25s linear;
   transition:color 0.25s linear, background-color 0.25s linear;
 }
 
-span.active {
+div.active {
   background: green;
 }
 
-form ul, form ol, form li {
-  clear: both;
-  list-style: none;
-}
-
-form li {
-  float: left;
-  padding: 5px  5px 5px 5px;
+div.click {
+  cursor: pointer;
 }
 
 button {
   cursor: pointer;
 }
 
-form > fieldset > button {
-  width: 90%;
-  align-content: center;
-}
-
-/* TODO: Improve centering buttons */
-ol.donation {
-  padding-left: 8%;
-}
-
-ol.donation > li {
-  clear: none;
-}
-
-ol.donation > li > * {
-  font-size: 1.9em;
-  height: 2em;
-  margin: 4.5px;
-  width: 5em;
-}
-
 ul.bucket > li {
   float: left;
   text-align: left;
-}
-
-li.first, li.last, li.city, li.state, li.zip, li.addr1, li.addr2 {
-  clear: none;
-  padding: 0 5px 0 0;
 }
 
 #donation-central h3 {
@@ -140,39 +89,6 @@ ol.payment > li {
   float: left;
 }
 
-/* A little help from:
- * http://codepen.io/CrocoDillon/pen/kmGCw
- * For making this form responsive!
- */
-
-@media screen and (min-width: 768px) {
-
-  li.first, li.city, li.addr1 {
-    float: left;
-    clear: left;
-    padding: 0 5px 0 0;
-  }
-
-  li.state {
-    float: left;
-    clear: none;
-  }
-
-  li.last, li.zip, li.addr2 {
-    float: left;
-    padding: 0 5px 0 0;
-  }
-
-  li.last > label {
-    width: 80px;
-  }
-
-  li.zip > label {
-    width: 32px;
-  }
-}
-
-
 button.amount::before {
   content: "Submit Donation: $";
 }
@@ -183,15 +99,7 @@ button.amount::before {
 
 .amount {
   font-size: 1.5em;
-  width: 90%;
-  align-content: center;
 }
-
-.form-horizontal .form-group {
-  margin-right: -5px;
-  margin-left: -5px;
-}
-
 
 /**
  * Some other stuff...
@@ -217,13 +125,6 @@ button.amount::before {
   padding-left: 130px;
   font-size: 1.5em;
 }
-
-
-/* .sa-cdc-utility { */
-/*   padding-right: 80px; */
-/*   font-size: 1em; */
-/*   text-align: right; */
-/* } */
 
 .brand {
   margin: 3px 0px 0px 0px;
@@ -261,11 +162,6 @@ footer {
     border: none;
     background-color: #0074B2;
 }
-
-/*  Attempting to fix carousel gradient */
-/* .carousel-control.left, .carousel-control.right { */
-/*     background-image: none */
-/* } */
 
 .carousel-caption a:link { color: #FFFFFF; }
 
@@ -323,32 +219,6 @@ footer {
   font-size: .5em;
 }
 
-/* .captionblack a:link { color: #000000; } */
-
-/* .captionblack a:active { color: #000000; } */
-
-/* .captionblack a:visited { color: #000000; } */
-
-/* /*Trying to move pagination dots lower*/ */
-/* .carousel-indicators { */
-/*   margin-bottom: 3px; */
-/* } */
-
-/*  Attempting to fix height of footer */
-/* .demo{ */
-/*     margin-bottom: -99999px; */
-/*     padding-bottom: 99999px; */
-/* } */
-
-/* .equal { */
-    /* overflow: hidden; */
-/* } */
-
-/* Add margin to buttons by default. */
-.btn {
-  margin: 5px 2px 2px 2px;
-}
-
 /**
  * Adding resoponsiveness to google maps iframe
  * Credit: http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-responsive-design/
@@ -368,13 +238,6 @@ footer {
     height: 100%;
 }
 
-/*Trying to fix linkedIn icon looking smaller than rest*/
-/*img.linkedIn {
-    margin: 11px 0px 11px 11px;
-    max-width: 61px;
-    max-height: 50px;
-}*/
-
 img.social-media {
     margin: 10px 10px 10px 10px;
     max-width: 50px;
@@ -382,7 +245,6 @@ img.social-media {
 }
 
 .social-media {
-    /*margin-top: 20px;*/
     text-align: center;
 }
 
@@ -401,17 +263,6 @@ p.partner {
   margin: 0px auto;
   border-radius: 5px;
 }
-
-/**
- * Vertical align image.
- **/
-/* span.partner { */
-/*   display: inline-block; */
-/*   vertical-align: middle; */
-/*   height: 100%; */
-/* } */
-
-
 
 /*
  * Link colors, make it pop on gray background.
@@ -434,17 +285,13 @@ a:visited { color: #0079C1; }
   text-align: center;
   vertical-align: top;
 }
-/* .bs-docs-featurette + .bs-docs-footer { */
-/*   margin-top: 0; */
-/*   border-top: 0; */
-/* } */
 
 .bs-docs-featurette-title {
-  /*font-size: 30px;*/
   font-weight: normal;
   color: #000;
   margin: 30px 10px;
 }
+
 .half-rule {
   width: 100px;
   margin: 40px auto;
@@ -464,9 +311,6 @@ a:visited { color: #0079C1; }
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-/* .bs-docs-featurette ul, ol { */
-/*   text-align: left; */
-/* } */
 .bs-docs-featurette-img {
   display: block;
   border-radius: 5px;
@@ -478,10 +322,6 @@ a:visited { color: #0079C1; }
   text-decoration: none;
   color: #428bca;
 }
-/* .bs-docs-featurette-img img { */
-/*   display: block; */
-/*   margin-bottom: 15px; */
-/* } */
 
 h4.carousel {
   opacity: 0;
@@ -494,20 +334,8 @@ h3.carousel {
 }
 
 .carousel-caption-ctr {
-  bottom: none;
   top: 25%;
 }
-
-/* .floattext { */
-/*   opacity: 0; */
-/*   font-size: 3em; */
-/* } */
-
-/* a.floattext:hover { */
-/*   color: #FFF; */
-/*   text-decoration: none; */
-/*   opacity: 1; */
-/* } */
 
 .blackground {
   background-color: #d3d3d3;
@@ -564,9 +392,6 @@ h3.carousel {
   .container-fluid {
     min-height: 80px;
   }
-  span.breadcrumb {
-    margin:5px 9.5%;
-  }
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -599,14 +424,6 @@ h3.carousel {
     margin-right: auto;
     max-width: 80%;
   }
-  /* .bs-docs-featured-sites .col-sm-3:first-child img { */
-  /*   border-top-left-radius: 4px; */
-  /*   border-bottom-left-radius: 4px; */
-  /* } */
-  /* .bs-docs-featured-sites .col-sm-3:last-child img { */
-  /*   border-top-right-radius: 4px; */
-  /*   border-bottom-right-radius: 4px; */
-  /* } */
 
   .bs-docs-featurette .img-responsive {
     margin-top: 0;
@@ -655,9 +472,7 @@ h3.carousel {
   padding-right: 100px;
   text-align: left;
   }
-  span.breadcrumb {
-    margin:5px 10.5%;
-  }
+
   ul.bucket > li {
     clear: none;
     width: 25%;
