--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Optional theme -->
     <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
@@ -59,7 +59,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo2_sm.gif"></a>
+            <a href="/" title="Home"><img class="brand"
+              src="/static/imgs/sa-cdc_logo2_sm.gif" alt="SA CDC"></a>
             <!-- FOR FUTURE SEARCH FUNCTION <p class="navbar-right navbar-text sa-cdc-utility">
               Search <span class="glyphicon glyphicon-search"></span> -->
           </div>
@@ -122,11 +123,23 @@
             </div>
           </div>
           <div class="col-md-5 social-media">
-                        <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="social-media" src="/static/imgs/soc_med/linkedin-64.png"></a>
-            <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/facebook-64.png"></a>
-            <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/twitter-64.png"></a>
-	          <a href="http://instagram.com/sachristiandental" target="_blank"><img class="social-media" src="/static/imgs/soc_med/instagram-64.png"></a>
-	          <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img class="social-media" src="/static/imgs/soc_med/pinterest-64.png"></a>
+                        <a
+                          href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym"
+                        target="_blank"><img class="social-media"
+                      src="/static/imgs/soc_med/linkedin-64.png" alt="LinkedIn"></a>
+            <a
+              href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960"
+            target="_blank"><img class="social-media"
+          src="/static/imgs/soc_med/facebook-64.png" alt="Facebook"></a>
+            <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img
+              class="social-media" src="/static/imgs/soc_med/twitter-64.png"
+            alt="Twitter"></a>
+	          <a href="http://instagram.com/sachristiandental"
+              target="_blank"><img class="social-media"
+            src="/static/imgs/soc_med/instagram-64.png" alt="Instagram"></a>
+	          <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img
+              class="social-media" src="/static/imgs/soc_med/pinterest-64.png"
+            alt="Pinterest"></a>
           </div>
         </div> <!-- row -->
     </footer>
