--- a/layouts/default.html
+++ b/layouts/default.html
@@ -67,40 +67,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
             <ul class="nav navbar-nav">
-              <%# TODO: Move this ERB code to a ruby method... %>
-              <% bigA = Array.new %>
-              <% home_pages = items_with_tag('sa-cdc')  %>
-              <% home_pages.each do |page| %>
-                <% h = { lnk: link_to(page[:title], page.reps[0]) } %>
-                <% h.merge!( { item: page } ) %>
-                <% h.merge!( { precedence: page[:precedence].to_i } ) %>
-                <% if @item[:group] == page[:group] %>
-                  <% h.merge!({ cls: "class=\"active\"" }) %>
-                  <% h.merge!({ cls_bald: "active" }) %>
-                <% end %>
-                <% bigA.push(h) %>
-              <% end %>
-              <% bigA.sort_by!{|v| v[:precedence]} %>
-              <% bigA.reverse! %>
-
-              <%# TODO: Base on method call from above code... %>
-              <% bigA.each do |page| %>
-                <% if(!page[:item].children.empty? && page[:item][:title]!= 'Home') %>
-                  <li class="dropdown <%= page[:cls_bald] %>">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= page[:item][:group] %> <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li> <%= link_to(page[:item][:title], page[:item].reps[0]) %></li>
-                      <% page[:item].children.each do |sub| %>
-                        <li><%= link_to(sub[:title], sub.reps[0]) %></li>
-                      <% end %>
-                    </ul>
-                  </li>
-                <% else %>
-                  <li <%= page[:cls] %>>
-                    <%= page[:lnk] %>
-                  </li>
-                <% end %>
-              <% end %>
+              <%= build_tabs(sort_pages) %>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
