--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -13,6 +13,11 @@
   margin-right: 0;
 }
 
+.googlate {
+  background-color: rgb(0, 0, 0);
+  text-align: right;
+}
+
 body {
   background: rgba(205, 205, 205, 1.0);
   background-size: cover;
