--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,6 +47,8 @@
     <!--[if !IE]> -->
       <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- <![endif]-->
+    <!-- Google Translate header info -->
+    <meta name="google-translate-customization" content="d10acaa1385b9319-33a48e62a5a0c098-g2709d51858ed0323-11"></meta>
   </head>
   <body class="bs-docs-home">
     <div id="main" class="container">
@@ -72,6 +74,14 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
+      <!-- Google Translate selection dropdown -->
+      <div id="google_translate_element" class="googlate"></div><script type="text/javascript">
+      function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+      }
+      </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      <!-- End Google selection dropdown -->
+
       <%= yield %>
       <footer>
         <div class="row well">
