Compiled team inputs from 24 March

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -97,7 +97,8 @@
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
-	          (210) 220-2300<br>
+            Patients: <a href="tel:2102202300">(210) 220-2300</a><br>
+            Donors/Volunteers: <a href="tel:2102202304">(210) 220-2304</a><br>
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
             </h5>
           </div>
