--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -65,6 +65,10 @@ div.stage {
   transition:color 0.25s linear, background-color 0.25s linear;
 }
 
+div.active {		
+  background: green;		
+}
+
 div.click {
   cursor: pointer;
 }
