--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -70,7 +70,7 @@ div.stage {
   transition:color 0.25s linear, background-color 0.25s linear;
 }
 
-div.active {		
+div.stage.active {		
   background: green;		
 }
 
