--- a/layouts/default.html
+++ b/layouts/default.html
@@ -37,6 +37,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-50777589-1', 'sachristiandental.org');
+      ga('require', 'linkid');
       ga('send', 'pageview');
 
     </script>
