Moving font preference to stylesheet.css

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,7 +5,7 @@
     <title>SA CDC - <%= @item[:title] %></title>
     <link rel="shortcut icon" href="/static/imgs/favicon.ico" type="image/x-icon" />
     <!-- Font: Fall-back is any san-serif font, set in style.css -->
-    <link href='//fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <!--<link href='//fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>-->
 
 
     <!-- JQuery -->
