--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -1,6 +1,7 @@
 /* Provided by Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Cabin);
 * {
-  font-family: 'Cabin', 'sans-serif';
+  font-family: 'Cabin', sans-serif;
 }
 
 .container {
