--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -180,7 +180,7 @@ footer {
 .carousel-caption a:visited { color: #C0C0C0; }
 
 .captionright {
-   padding: 1000px;
+   padding-top: 1000px;
    right: 10px;
    left: auto;
    max-width: 150px;
