--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -180,7 +180,7 @@ footer {
 .carousel-caption a:visited { color: #C0C0C0; }
 
 .captionright {
-   padding-top: 1000px;
+	top: 25%;
    right: 10px;
    left: auto;
    max-width: 150px;
@@ -190,7 +190,7 @@ footer {
 }
 
 .captionleft {
-	top: 100px;
+	top: 25%;
   left: 10px;
   right: auto;
   max-width: 150px;
