--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -534,14 +534,16 @@ h3.carousel {
 @media (min-width: 1200px) {
   .captionleft {
     max-width: 450px;
-    top: 10px;
+    top: auto;
+    padding-top: 100px;
     bottom: 300px;
     right: 650px;
     left: auto;
   }
   .captionright {
     max-width: 450px;
-    top: 10px;
+    top: auto;
+    padding-top: 100px;
     bottom: 300px;
     right: auto;
     left: 650px;
