--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -535,7 +535,7 @@ h3.carousel {
   .captionleft {
     max-width: 450px;
     top: auto;
-    padding-top: 100px;
+    padding-top: 50%;
     bottom: 300px;
     right: 650px;
     left: auto;
@@ -543,7 +543,7 @@ h3.carousel {
   .captionright {
     max-width: 450px;
     top: auto;
-    padding-top: 100px;
+    padding-top: 50%;
     bottom: 300px;
     right: auto;
     left: 650px;
