--- a/layouts/default.html
+++ b/layouts/default.html
@@ -85,6 +85,9 @@
             Donors/Volunteers: <a href="tel:2102202304">(210) 220-2304</a><br>
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
             </h5>
+            <p>
+		    <a href="/privacy"> Privacy and Terms of Use </a>
+            </p>
           </div>
 
           <div class="col-md-4">
