--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -186,6 +186,7 @@ footer {
 .captionright {
    right: 10px;
    left: auto;
+   margin-top: 100px;
    max-width: 150px;
    border-radius: 5px;
    padding-bottom: 0px;
