--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -182,6 +182,7 @@ footer {
 .captionright {
    right: 10px;
    left: auto;
+   top: auto;
    max-width: 150px;
    border-radius: 5px;
    padding-bottom: 0px;
