--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -456,6 +456,7 @@ h3.carousel {
   }
   .captionright {
     max-width: 250px;
+    top: 55px;
     right: auto;
     left: 400px;
   }
@@ -510,6 +511,7 @@ h3.carousel {
   }
   .captionright {
     max-width: 450px;
+    top: 55px;
     right: 25px;
     left: 550px;
   }
@@ -533,6 +535,7 @@ h3.carousel {
   }
   .captionright {
     max-width: 450px;
+    top: 55px;
     right: auto;
     left: 650px;
   }
